style: fix dark mode colours for tanstack-table

--- a/styling/theme.scss
+++ b/styling/theme.scss
@@ -160,3 +160,147 @@
     }
   }
 }
+
+.dark, .dark-theme {
+  --blue-1: #040f2b;
+  --blue-2: #061438;
+  --blue-3: #001076;
+  --blue-4: #0000a1;
+  --blue-5: #0000be;
+  --blue-6: #0015d4;
+  --blue-7: #0021f1;
+  --blue-8: #2126ff;
+  --blue-9: #0000cd;
+  --blue-10: #001ef0;
+  --blue-11: #99a7ff;
+  --blue-12: #d0e1ff;
+
+  --blue-a1: #0000fe1c;
+  --blue-a2: #0024fe2a;
+  --blue-a3: #000ffd6d;
+  --blue-a4: #0000fe9b;
+  --blue-a5: #0000feba;
+  --blue-a6: #0016ffd1;
+  --blue-a7: #0022fff0;
+  --blue-a8: #2126ff;
+  --blue-a9: #0000feca;
+  --blue-a10: #001fffef;
+  --blue-a11: #99a7ff;
+  --blue-a12: #d0e1ff;
+
+  --blue-contrast: #fff;
+  --blue-surface: #00175f80;
+  --blue-indicator: #0000cd;
+  --blue-track: #0000cd;
+}
+
+@supports (color: color(display-p3 1 1 1)) {
+  @media (color-gamut: p3) {
+    .dark, .dark-theme {
+      --blue-1: oklch(17.8% 0.059 264.1);
+      --blue-2: oklch(20.7% 0.073 264.1);
+      --blue-3: oklch(27.1% 0.167 264.1);
+      --blue-4: oklch(31.8% 0.224 264.1);
+      --blue-5: oklch(36.1% 0.251 264.1);
+      --blue-6: oklch(40.4% 0.266 264.1);
+      --blue-7: oklch(45% 0.289 264.1);
+      --blue-8: oklch(50.3% 0.33 264.1);
+      --blue-9: oklch(38.3% 0.266 264.1);
+      --blue-10: oklch(44.6% 0.289 264.1);
+      --blue-11: oklch(77.7% 0.296 264.1);
+      --blue-12: oklch(91.1% 0.103 264.1);
+
+      --blue-a1: color(display-p3 0 0 1 / 0.101);
+      --blue-a2: color(display-p3 0 0.145 1 / 0.156);
+      --blue-a3: color(display-p3 0 0.059 1 / 0.404);
+      --blue-a4: color(display-p3 0 0 1 / 0.576);
+      --blue-a5: color(display-p3 0 0 1 / 0.694);
+      --blue-a6: color(display-p3 0.004 0.086 1 / 0.782);
+      --blue-a7: color(display-p3 0.035 0.129 0.996 / 0.9);
+      --blue-a8: color(display-p3 0.133 0.153 1 / 0.958);
+      --blue-a9: color(display-p3 0 0 1 / 0.757);
+      --blue-a10: color(display-p3 0.027 0.118 1 / 0.895);
+      --blue-a11: color(display-p3 0.627 0.671 1 / 0.975);
+      --blue-a12: color(display-p3 0.839 0.89 1 / 0.988);
+
+      --blue-contrast: #fff;
+      --blue-surface: color(display-p3 0.004 0.086 0.353 / 0.5);
+      --blue-indicator: oklch(38.3% 0.266 264.1);
+      --blue-track: oklch(38.3% 0.266 264.1);
+    }
+  }
+}
+
+.dark, .dark-theme {
+  --gray-1: #111;
+  --gray-2: #181818;
+  --gray-3: #222;
+  --gray-4: #292929;
+  --gray-5: #303030;
+  --gray-6: #3a3a3a;
+  --gray-7: #474747;
+  --gray-8: #606060;
+  --gray-9: #6d6d6d;
+  --gray-10: #7a7a7a;
+  --gray-11: #b3b3b3;
+  --gray-12: #ededed;
+
+  --gray-a1: #00000000;
+  --gray-a2: #ffffff08;
+  --gray-a3: #ffffff12;
+  --gray-a4: #ffffff1a;
+  --gray-a5: #ffffff21;
+  --gray-a6: #ffffff2c;
+  --gray-a7: #ffffff3a;
+  --gray-a8: #ffffff55;
+  --gray-a9: #ffffff63;
+  --gray-a10: #ffffff71;
+  --gray-a11: #ffffffae;
+  --gray-a12: #ffffffec;
+
+  --gray-contrast: #FFFFFF;
+  --gray-surface: rgba(0, 0, 0, 0.05);
+  --gray-indicator: #6d6d6d;
+  --gray-track: #6d6d6d;
+}
+
+@supports (color: color(display-p3 1 1 1)) {
+  @media (color-gamut: p3) {
+    .dark, .dark-theme {
+      --gray-1: oklch(17.8% 0 0);
+      --gray-2: oklch(21.1% 0 0);
+      --gray-3: oklch(25.1% 0 0);
+      --gray-4: oklch(28.1% 0 0);
+      --gray-5: oklch(31% 0 0);
+      --gray-6: oklch(34.7% 0 0);
+      --gray-7: oklch(39.9% 0 0);
+      --gray-8: oklch(48.8% 0 0);
+      --gray-9: oklch(53.5% 0 0);
+      --gray-10: oklch(58.1% 0 0);
+      --gray-11: oklch(76.6% 0 0);
+      --gray-12: oklch(94.7% 0 0);
+
+      --gray-a1: color(display-p3 0 0 0 / 0);
+      --gray-a2: color(display-p3 1 1 1 / 0.029);
+      --gray-a3: color(display-p3 1 1 1 / 0.071);
+      --gray-a4: color(display-p3 1 1 1 / 0.101);
+      --gray-a5: color(display-p3 1 1 1 / 0.13);
+      --gray-a6: color(display-p3 1 1 1 / 0.172);
+      --gray-a7: color(display-p3 1 1 1 / 0.227);
+      --gray-a8: color(display-p3 1 1 1 / 0.332);
+      --gray-a9: color(display-p3 1 1 1 / 0.387);
+      --gray-a10: color(display-p3 1 1 1 / 0.441);
+      --gray-a11: color(display-p3 1 1 1 / 0.681);
+      --gray-a12: color(display-p3 1 1 1 / 0.924);
+
+      --gray-contrast: #FFFFFF;
+      --gray-surface: color(display-p3 0 0 0 / 5%);
+      --gray-indicator: oklch(53.5% 0 0);
+      --gray-track: oklch(53.5% 0 0);
+    }
+  }
+}
+
+.dark, .dark-theme, :is(.dark, .dark-theme) :where(.radix-themes:not(.light, .light-theme)) {
+  --color-background: #111;
+}
